# Veridox

./: .gitignore  README.md  Veridox.sln  premake5.lua
.github/workflows/: build.yml
Dependencies/include/xlnt/utils/: xlnt_cmake_export.h
Dependencies/lib/: libxl32.lib  libxl64.lib
Veridox/: CMakeLists.txt  Veridox.vcxproj
Veridox-Sample/: Results.xls  Veridox-Sample.vcxproj
Veridox-Sample/source/: Tests.cpp
Veridox/Private/include/: Border.h  Cell.h  CellAlignment.h  Color.h  Excel.h  ExcelHelper.h  Font.h  Sheet.h  Style.h  Workbook.h
Veridox/Private/source/: Border.cpp  Cell.cpp  CellAlignment.cpp  Color.cpp  Excel.cpp  ExcelHelper.cpp  Font.cpp  Sheet.cpp  Style.cpp  Workbook.cpp
Veridox/Public/include/: VAssert.h  Veridox.h
Veridox/Public/source/: VAssert.cpp  Veridox.cpp
Veridox/private/include/: ExcelColumn.h  ExcelFont.h  ExcelHelper.h
Veridox/private/source/: ExcelColumn.cpp  ExcelFont.cpp  ExcelHelper.cpp
